--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Love Running club for runners in Dublin, Ireland">
     <meta name="keywords" content="love running, running club, dublin, ireland">
+    
 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Love Running</title>
@@ -42,14 +43,14 @@
         <h2 id="welcome">Why Love Running With Us?</h2>
         <div id="left-about">
             <div class="left-about-heading">
-                <h2>Feel Healthy</h2>
+                <h2>Feel Healthy <i class="fas fa-heartbeat"></i></h2>
                 <hr>
                 <p>
                     Since it improves aerobic fitness, running is a great way to help improve your cardiovascular health. Plus, it burns calories and can build strength.
                 </p>
             </div>
             <div class="left-about-heading">
-                <h2>Feel Free</h2>
+                <h2>Feel Free <i class="fab fa-fly"></i></h2>
                 <hr>
                 <p>
                     Physical exercise, running included, is known to release endorphins in the brain. Endorphins make you more energetic, more awake and, yes, happier.
@@ -58,14 +59,14 @@
         </div>
         <div id="right-about">
             <div class="right-about-heading">
-                <h2>Get Social</h2>
+                <h2>Get Social <i class="fas fa-globe"></i></h2>
                  <hr>
                  <p>
                     When we run with others, we can run farther and faster more easily. Social running can pull you out of a running funk or low mood, inspire you to try new events
                 </p>
             </div>
             <div class="right-about-heading">
-                <h2>Feel Strong</h2>
+                <h2>Feel Strong <i class="fas fa-dumbbell"></i></h2>
                  <hr>
                  <p>
                     Running strengthens your heart by pumping blood more effectively through your body.
@@ -86,6 +87,9 @@
     <footer>
         social links here
     </footer>
+
+ <!-- font awesome script -->   
+ <script src="https://kit.fontawesome.com/0686dfe713.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
