--- a/index.html
+++ b/index.html
@@ -119,7 +119,21 @@
         </div>
     </section>
     <footer>
-        social links here
+        <ul>
+            <li>
+                <a href="http://www.facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="http://www.twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter"></i></i></a>
+            </li>
+            <li>
+                <a href="http://www.youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fab fa-youtube"></i></i></a>
+            </li>
+            <li>
+                <a href="http://www.instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></i></a>
+            </li>
+            
+        </ul>
     </footer>
 
  <!-- font awesome script -->   
