--- a/gallery.html
+++ b/gallery.html
@@ -32,7 +32,17 @@
             </ul>
         </nav>
     </header>
-
+    <section id="photos">
+        <img src="/assets/images/athletes.jpg" alt="Two athletes running together">
+        <img src="/assets/images/girls.jpg" alt="Three girls at charity paint running festival">
+        <img src="/assets/images/runner3 - Copy.jpg" alt="Solo man runner jogging on beach">
+        <img src="/assets/images/man - Copy.jpg" alt="Man at charity paint running festival">
+        <img src="/assets/images/runner1 - Copy.jpg" alt="Solo female runner jogging through pheonix park">
+        <img src="/assets/images/runner2 - Copy.jpg" alt="Runners competing in marathon">
+        <img src="/assets/images/runner4 - Copy.jpg" alt="Solo female runner jogging on beach">
+        <img src="/assets/images/running_gang - Copy.jpg" alt="Large group of runners taking part in a marathon on a rainy day">
+        <img src="/assets/images/mud-run - Copy.jpg" alt="Two women runners taking a muddy selfie after the Mud Runners Championship">
+    </section>
     <footer>
         <ul class="social-networks">
             <li>
